# synq-language

./: CONTRIBUTING.md  Cargo.toml  INTEGRATION_STATUS.md  README.md  aegis-pqsynq  checklist.md
compiler/: Cargo.toml
compiler/src/: ast.rs  codegen.rs  lib.rs  parser.rs  pqc_integration.rs  semantic.rs  solidity_gen.rs  synq.pest  version.rs
compiler/tests/: integration_test.rs  semantic_test.rs
pqrust/pqrust/: Cargo.toml
pqrust/pqrust-cmce/: Cargo.toml  build.rs
pqrust/pqrust-cmce/pqclean/common/: fips202.h  sha2.h  sp800-185.c
pqrust/pqrust-cmce/pqclean/crypto_kem/hqc-128/clean/: code.h  gf.c  reed_muller.c  reed_solomon.h  shake_ds.h
pqrust/pqrust-cmce/pqclean/crypto_kem/hqc-256/clean/: hqc.c
pqrust/pqrust-cmce/pqclean/crypto_kem/mceliece348864/avx2/: crypto_int16.h  crypto_uint32.h  fft.h  int32_sort.h  namespace.h  pk_gen.h
pqrust/pqrust-cmce/pqclean/crypto_kem/mceliece348864/clean/: aes256ctr.h
pqrust/pqrust-cmce/pqclean/crypto_kem/mceliece348864f/avx2/: aes256ctr.c  bm.c  crypto_int32.h
pqrust/pqrust-cmce/pqclean/crypto_kem/mceliece348864f/clean/: benes.c  gf.h
pqrust/pqrust-cmce/pqclean/crypto_kem/mceliece460896/avx2/: crypto_hash.h  crypto_int16.h  decrypt.h  operations.c
pqrust/pqrust-cmce/pqclean/crypto_kem/mceliece460896/clean/: crypto_kem.h  gf.c  sk_gen.c
pqrust/pqrust-cmce/pqclean/crypto_kem/mceliece460896f/avx2/: crypto_kem.h  crypto_uint16.h
pqrust/pqrust-cmce/src/: cmce348864.rs  cmce348864f.rs  cmce460896.rs  cmce460896f.rs  cmce6688128.rs  cmce6688128f.rs  cmce6960119.rs  cmce6960119f.rs  cmce8192128.rs  cmce8192128f.rs  ffi.rs  lib.rs
pqrust/pqrust-fndsa/: Cargo.toml  build.rs
pqrust/pqrust-fndsa/pqclean/common/: aes.h  crypto_declassify.h  nistseedexpander.c  sha2.c
pqrust/pqrust-fndsa/src/: ffi.rs  fndsa1024.rs  fndsa512.rs  fndsapadded1024.rs  fndsapadded512.rs  lib.rs
pqrust/pqrust-hqckem/: Cargo.toml  build.rs
pqrust/pqrust-hqckem/pqclean/common/: compat.h
pqrust/pqrust-hqckem/pqclean/common/keccak4x/: SIMD256-config.h  align.h
pqrust/pqrust-hqckem/src/: ffi.rs  hqckem128.rs  hqckem192.rs  hqckem256.rs  lib.rs
pqrust/pqrust-internals/: Cargo.toml  build.rs
pqrust/pqrust-internals/cfiles/: aes.c  fips202.c  nistseedexpander.c  randombytes.c  sha2.c  sp800-185.c
pqrust/pqrust-internals/cfiles/keccak2x/: fips202x2.c
pqrust/pqrust-internals/cfiles/keccak4x/: KeccakP-1600-times4-SIMD256.c  KeccakP-1600-times4-SnP.h  brg_endian.h
pqrust/pqrust-internals/include/: aes.h  fips202.h  nistseedexpander.h  randombytes.h  sha2.h  sp800-185.h
pqrust/pqrust-internals/src/: lib.rs
pqrust/pqrust-mlkem/: Cargo.toml  build.rs
pqrust/pqrust-mlkem/pqclean/common/: aes.c  sp800-185.h
pqrust/pqrust-mlkem/pqclean/common/keccak2x/: fips202x2.h
pqrust/pqrust-mlkem/pqclean/common/keccak4x/: KeccakP-1600-times4-SIMD256.c  brg_endian.h
pqrust/pqrust-mlkem/src/: ffi.rs  lib.rs  mlkem1024.rs  mlkem512.rs  mlkem768.rs
pqrust/pqrust/src/: lib.rs
pqsynq/aegis_crypto_core/: Cargo-minimal.toml  Cargo.toml  README.md  build-nodejs-minimal.sh  build-nodejs-wasm.sh
pqsynq/aegis_crypto_core/.cargo/: config.toml
pqsynq/aegis_crypto_core/.github/workflows/: ci.yml
pqsynq/aegis_crypto_core/benches/: classicmceliece_benchmarks.rs  performance_benchmarks.rs  simple_bench.rs
pqsynq/aegis_crypto_core/config/: package.json  pyproject.toml  wasm-pack.toml
pqsynq/aegis_crypto_core/fuzz/: Cargo.toml
pqsynq/aegis_crypto_core/fuzz/fuzz_targets/: kyber_fuzz.rs
pqsynq/aegis_crypto_core/pkg-minimal/: aegis_crypto_core.d.ts  aegis_crypto_core.js  aegis_crypto_core_bg.wasm.d.ts  package.json  test-minimal.js
pqsynq/aegis_crypto_core/src/: audit_logging.rs  blockchain.rs  js_bindings.rs  lib.rs  nist_wasm_mldsa.rs  nist_wasm_mlkem.rs  nodejs_init.rs  performance.rs  secure_key_management.rs  security_monitoring.rs  traits.rs  utils.rs  wasm_loader.rs
pqsynq/aegis_crypto_core/src-minimal/: lib.rs
pqsynq/aegis_crypto_core/src/bin_backup/: blockchain_wallet.rs  digital_identity.rs  document_signing.rs  financial_security.rs  iot_security.rs  secure_messaging.rs  web_api_server.rs
pqsynq/aegis_crypto_core/src/cmce/: core.rs  mod.rs  utils.rs  wasm_bindings.rs
pqsynq/aegis_crypto_core/src/fndsa/: core.rs  mod.rs  utils.rs  wasm_bindings.rs
pqsynq/aegis_crypto_core/src/hqckem/: core.rs  mod.rs  utils.rs  wasm_bindings.rs
pqsynq/aegis_crypto_core/src/mldsa/: core.rs  mod.rs  utils.rs  wasm_bindings.rs
pqsynq/aegis_crypto_core/src/mlkem/: core.rs  mod.rs  traits.rs  utils.rs  wasm_bindings.rs
pqsynq/aegis_crypto_core/src/nist/: mod.rs
pqsynq/aegis_crypto_core/src/rustpqc_mldsa/: mod.rs
pqsynq/aegis_crypto_core/src/rustpqc_mlkem/: mod.rs
pqsynq/aegis_crypto_core/src/slhdsa/: core.rs  mod.rs  utils.rs  wasm_bindings.rs
pqsynq/aegis_crypto_core/tests/: README.md  complete_browser_suite_remaining.rs  comprehensive_kat_tests.rs  dilithium_browser_tests.rs  dilithium_kat_tests.rs  dilithium_native_tests.rs  dilithium_wasm_tests.rs  falcon_browser_tests.rs  falcon_kat_tests.rs  falcon_native_tests.rs  falcon_wasm_tests.rs  hqc_browser_tests.rs  hqc_kat_tests.rs  hqc_native_tests.rs  hqc_wasm_tests.rs  kat_tests.rs  kat_validation.rs  kyber_browser_tests.rs  kyber_kat_tests.rs  kyber_native_tests.rs  kyber_wasm_tests.rs  nist_kat_validation.rs  performance_tests.rs  run_browser_tests.sh  run_wasi_tests.sh  sphincsplus_browser_tests.rs  sphincsplus_kat_tests.rs  sphincsplus_native_tests.rs  sphincsplus_wasm_tests.rs  test.sh  test_classicmceliece.sh  test_nist_wasm.rs  test_rustpqc_integration.rs  test_wasm.sh  test_wasm_classicmceliece.sh  trait_tests.rs
pqsynq/pqsynq/: Cargo.toml  README.md
pqsynq/pqsynq/.github/workflows/: ci.yml
pqsynq/pqsynq/benches/: pqc_benchmarks.rs
pqsynq/pqsynq/scripts/: run_tests.sh
pqsynq/pqsynq/src/: error.rs  kem.rs  lib.rs  sign.rs  traits.rs  utils.rs
pqsynq/pqsynq/tests/: basic_tests.rs  comprehensive_tests.rs  individual_results.rs  kat_tests.rs  simple_test.rs
vm/: Cargo.toml  README.md
vm/src/: assembler.rs  lib.rs  opcode.rs  vm.rs
vm/tests/: integration_test.rs
(+1202 files in other folders)
