[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.7"
pest_derive = "2.7.7"
quantumvm = { path = "../vm" }
# pqsynq integration for PQC operations - fully integrated as internal dependency
pqsynq = { path = "../pqsynq/pqsynq", default-features = false, features = ["mlkem", "mldsa", "fndsa"] }

[dev-dependencies]
assert_matches = "1.5.0"
