[package]
name = "quantumvm"
version = "1.0.0"
edition = "2021"

[dependencies]
pqsynq = { package = "aegis-pqsynq", path = "../aegis-pqsynq/pqsynq", default-features = false, features = ["mlkem", "mldsa", "fndsa", "hqckem"] }

[dev-dependencies]
pqsynq = { package = "aegis-pqsynq", path = "../aegis-pqsynq/pqsynq", default-features = false, features = ["mlkem", "mldsa", "fndsa", "hqckem"] }
