[package]
name = "pqrust-cmce"
description = "Post-Quantum Key-Encapsulation Mechanism Classic McEliece"
version = "0.2.0"
edition = "2021"
keywords = ["cryptography", "post-quantum", "security"]
categories = ["cryptography", "no-std"]

[dependencies]
pqrust-internals = { workspace = true }
pqrust-traits = { workspace = true, default-features = false }
libc = "0.2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }
zeroize = { version = "1.3.0", optional = true }

[features]
default = ["avx2", "std"]
avx2 = ["std"]
std = ["pqrust-traits/std"]
serialization = ["serde", "serde-big-array"]
zeroize = ["dep:zeroize"]

[dev-dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3.0"