[package]
name = "pqrust-fndsa"
description = "Post-Quantum Signature Scheme FN-DSA (FFT over NTRU-Lattice-Based Digital Signature Algorithm)"
version = "0.4.0"
edition = "2021"
keywords = ["cryptography", "post-quantum", "security"]
categories = ["cryptography", "no-std"]

[dependencies]
pqrust-internals = { workspace = true }
pqrust-traits = { workspace = true, default-features = false }
libc = "0.2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }

[features]
default = ["avx2", "neon", "std"]
avx2 = ["std"]
neon = ["std"]
std = ["pqrust-traits/std"]
serialization = ["serde", "serde-big-array"]

[dev-dependencies]
rand = "0.9"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3.0"
