[package]
name = "pqsynq"
version = "0.1.0"
edition = "2021"
authors = ["Justin Hutzler"]
description = "Post-Quantum Cryptography implementation for SynQ"
license = "MIT"
repository = "https://github.com/synergy-network-hq/aegis"

[dependencies]
# Core PQC implementations - use workspace dependencies (defined in SynQ workspace root)
pqrust-mlkem = { workspace = true, optional = true }
pqrust-mldsa = { workspace = true, optional = true }
pqrust-fndsa = { workspace = true, optional = true }

# Standard library features
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
pqrust-traits = { workspace = true }
getrandom = { version = "0.2", features = ["std"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[features]
default = ["mlkem", "mldsa", "fndsa", "std"]
std = []
mlkem = ["dep:pqrust-mlkem"]
mldsa = ["dep:pqrust-mldsa"]
fndsa = ["dep:pqrust-fndsa"]
full = []

[[bench]]
name = "pqc_benchmarks"
harness = false
