[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aegis-crypto-core"
version = "0.1.0"
description = "Aegis: Unified Post-Quantum Cryptography library with MLKEM, MLDSA, FN-DSA, SPHINCS+, HQC, and Classic McEliece support"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Justin Hutzler", email = "justin@synergy-network.io" }]
keywords = [
  "post-quantum",
  "cryptography",
  "pqrust",
  "mlkem",
  "mldsa",
  "fndsa",
  "slhdsa",
  "hqc",
  "cmce",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://synergy-network.io"
Repository = "https://github.com/synergy-network-hq/aegis"
Documentation = "https://docs.rs/aegis_crypto_core"
"Bug Tracker" = "https://github.com/synergy-network-hq/aegis/issues"

[tool.maturin]
features = ["python-bindings"]
module-name = "aegis_crypto_core"
